deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llama7b-non-optimized
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
      tier: llama7b-non-optimized
  template:
    metadata:
      labels:
        app: chat
        tier: llama7b-non-optimized
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - ng-eorplybp44-95969    #Node in IKS
      containers:
        - name: llama7b-non-optimized
          image:  "<<YOUR CONTAINER REGISTRY URL>>:latest"
          ports:
            - name: app-port
              containerPort: 5005
          volumeMounts:
            - name: iks-volume-1
              mountPath: /fs_mounted
      imagePullSecrets:
        - name: ecr-secret
      volumes:
        - name: iks-volume-1
          persistentVolumeClaim:
            claimName: iks-claim50
---
apiVersion: v1
kind: Service
metadata:
  name: llama7b-non-optimized-service
  labels:
    app.kubernetes.io/name: llama7b-non-optimized-service
spec:
  type: ClusterIP
  selector:
    app: chat
    tier: llama7b-non-optimized
  ports:
    - name: svc-port
      port: 80
      targetPort: app-port
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
      tier: frontend
  template:
    metadata:
      labels:
        app: chat
        tier: frontend
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - ng-eorplybp44-95969    #Node in IKS
      containers:
      - name: react-frontend
        image:  <<YOUR CONTAINER REGISTRY URL>>:latest
        ports:
            - name: app-port
              containerPort: 3000
      imagePullSecrets:
        - name: ecr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app.kubernetes.io/name: frontend-service
spec:
  type: ClusterIP
  selector:
    app: chat
    tier: frontend
  ports:
    - name: svc-port
      port: 80
      targetPort: app-port
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llms-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
      tier: llms-proxy
  template:
    metadata:
      labels:
        app: chat
        tier: llms-proxy
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - ng-eorplybp44-95969    #Node in IKS
      containers:
      - name: llms-proxy
        image:  <<YOUR CONTAINER REGISTRY URL>>:latest
        ports:
            - name: app-port
              containerPort: 5000
      imagePullSecrets:
        - name: ecr-secret
      serviceAccountName: frontend-service-account
---
apiVersion: v1
kind: Service
metadata:
  name: llms-proxy-service
  labels:
    app.kubernetes.io/name: llms-proxy-service
spec:
  type: ClusterIP
  selector:
    app: chat
    tier: llms-proxy
  ports:
    - name: svc-port
      port: 80
      targetPort: app-port
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
      tier: openai
  template:
    metadata:
      labels:
        app: chat
        tier: openai
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - ng-eorplybp44-95969
      containers:
      - name: openai
        image:  <<YOUR CONTAINER REGISTRY URL>>:latest
        ports:
            - name: app-port
              containerPort: 4000
        volumeMounts:
            - name: iks-volume-1
              mountPath: /fs_mounted
      imagePullSecrets:
        - name: ecr-secret
      volumes:
        - name: iks-volume-1
          persistentVolumeClaim:
            claimName: iks-claim50

---
apiVersion: v1
kind: Service
metadata:
  name: openai-service
  labels:
    app.kubernetes.io/name: openai-service
spec:
  type: ClusterIP
  selector:
    app: chat
    tier: openai
  ports:
    - name: svc-port
      port: 80
      targetPort: app-port
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llama7b-optimized
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
      tier: llama7b-optimized
  template:
    metadata:
      labels:
        app: chat
        tier: llama7b-optimized
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - ng-eorplybp44-95969    #Node in IKS
      containers:
      - name: llama7b-optimized
        image:  <<YOUR CONTAINER REGISTRY URL>>:latest
        ports:
            - name: app-port
              containerPort: 8000
        volumeMounts:
            - name: iks-volume-1
              mountPath: /fs_mounted
      imagePullSecrets:
        - name: ecr-secret
      volumes:
        - name: iks-volume-1
          persistentVolumeClaim:
            claimName: iks-claim50

---
apiVersion: v1
kind: Service
metadata:
  name: llama7b-optimized-service
  labels:
    app.kubernetes.io/name: llama7b-optimized-service
spec:
  type: ClusterIP
  selector:
    app: chat
    tier: llama7b-optimized
  ports:
    - name: svc-port
      port: 80
      targetPort: app-port
      protocol: TCP
